--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.NFC" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <uses-feature
         android:name="android.hardware.nfc"
@@ -15,6 +17,10 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <service
+            android:name="com.estimote.sdk.service.BeaconService"
+            android:exported="false" />
+
         <activity
             android:name=".DeviceListActivity"
             android:label="@string/app_name" >
@@ -41,19 +47,25 @@
         <activity
             android:name=".NfcDiscovered"
             android:label="@string/title_nfc_activity" >
-
             <intent-filter>
-                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
-                <action android:name="android.nfc.action.TAG_DISCOVERED"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <data android:scheme="had"
-                    android:host="binary"
-                    android:pathPrefix="/4/on" />
-                <data android:scheme="had"
-                    android:host="binary"
-                    android:pathPrefix="/4/off" />
-            </intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+                <action android:name="android.nfc.action.TAG_DISCOVERED" />
 
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data
+                    android:host="binary"
+                    android:pathPrefix="/4/on"
+                    android:scheme="had" />
+                <data
+                    android:host="binary"
+                    android:pathPrefix="/4/off"
+                    android:scheme="had" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".BeaconDistanceDemo"
+            android:label="@string/title_activity_beacon_distance_demo" >
         </activity>
     </application>
 
